# Valkyrie

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh
CMakeConfigs/: FindNordicEngine.cmake
Game/: Game.cpp  Game.hpp  Includes.hpp  buildNumber.hpp
Game/GameStart/: GameStart.cpp  GameStart.hpp
